[package]
name = "fastmemory"
version = "0.1.1"
edition = "2021"
description = "A CBFDAE Ontological Clustering Engine for AI Agent Memory"
license = "MIT"
repository = "https://github.com/FastBuilderAI/memory"
homepage = "https://fastbuilder.ai"
exclude = ["example/*", "scripts/*", "*.png", "*.md", "!README.md"]

[lib]
name = "fastmemory"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fastmemory"
path = "src/main.rs"

[features]
default = []
python = ["pyo3/extension-module"]

[dependencies]
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
pyo3 = { version = "0.28.2", optional = true }
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full", "rt-multi-thread"] }
axum = "0.7.5"
