[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "fastmemory"
version = "0.4.0"
description = "FastBuilder.AI text memory graph cluster tool using Louvain"
authors = [{ name = "FastBuilder.AI", email = "team@fastbuilder.ai" }]
requires-python = ">=3.8"
urls = { Repository = "https://github.com/FastBuilderAI/memory" }
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["python"]
bindings = "pyo3"
module-name = "fastmemory.fastmemory"
